Feat: Add project and report id

--- a/ddpcr/app/templates/components/lot_info_modal/lot_info_modal.html
+++ b/ddpcr/app/templates/components/lot_info_modal/lot_info_modal.html
@@ -29,8 +29,12 @@
               {% endif %}
             </tr>
             <tr>
-              <td><strong>Test ID</strong></td>
-              <td>{{ lot.test_id }}</td>
+              <td><strong>Project ID</strong></td>
+              <td>{{ lot.project_id }}</td>
+            </tr>
+            <tr>
+              <td><strong>Report ID</strong></td>
+              <td>{{ lot.report_id }}</td>
             </tr>
             <tr>
               <td><strong>Ordered</strong></td>
