Feat: Add lots and patients to assay type

--- a/ddpcr/app/templates/components/assay_info_modal/assay_info_modal.html
+++ b/ddpcr/app/templates/components/assay_info_modal/assay_info_modal.html
@@ -1,71 +1,109 @@
+{% block js %}
+<script>
+  $(document).ready( function () {
+    $('#sequence').replace(/(.{5})/g,"$1$")
+  } );
+</script>
+{% endblock %}
+{% load component_tags %}
+{% load filters %}
 <button class="btn btn-outline-primary mx-2" type="button" data-toggle="modal" data-target="#{{ assay.assay_name }}">
   <i class="bi bi-info-lg"></i>
   <span class="mx-2">View details</span>
 </button>
 <div class="modal fade" id="{{ assay.assay_name }}" tabindex="-1" role="dialog" aria-labelledby="info-box" aria-hidden="true">
-  <div class="modal-dialog" role="document">
+  <div class="modal-dialog modal-lg" role="document">
     <div class="modal-content">
       <div class="modal-header">
         <h5 class="modal-title" id="exampleModalLabel">{{ assay.assay_name }}</h5>
         {% if assay.status == 0 %}
           <span class="badge bg-warning">{{ assay.statlab }}</span>
-        {% elif assay.status < 3 %}
+        {% elif assay.status < 2 %}
           <span class="badge bg-error">{{ assay.statlab }}</span>
         {% else %}
           <span class="badge bg-success">{{ assay.statlab }}</span>
         {% endif %}
       </div>
       <div class="modal-body">
-        <table class="mx-2">
+        <table class="table mx-2">
           <tbody>
             <tr>
-              <td><strong>Assay ID</strong></td>
+              <th scope="row">Assay ID</th>
               <td>{{ assay.assay_id }}</td>
             </tr>
             <tr>
-              <td><strong>Assay ID Secondary</strong></td>
+              <th scope="row">Assay ID Secondary</th>
               <td>{{ assay.assay_id_sec }}</td>
             </tr>
             <tr>
-              <td><strong>Tube ID</strong></td>
+              <th scope="row">Tube ID</th>
               <td>{{ assay.tube_id }}</td>
             </tr>
             <tr>
-              <td><strong>Gene</strong></td>
+              <th scope="row">Gene</th>
               <td>{{ assay.gene }}</td>
             </tr>
             <tr>
-              <td><strong>Transcript</strong></td>
+              <th scope="row">Transcript</th>
               <td>{{ assay.transcript }}</td>
             </tr>
             <tr>
-              <td><strong>cDNA</strong></td>
+              <th scope="row">cDNA</th>
               <td>{{ assay.cdna }}</td>
             </tr>
             <tr>
-              <td><strong>Protein</strong></td>
+              <th scope="row">Protein</th>
               <td>{{ assay.protein }}</td>
             </tr>
             <tr>
-              <td><strong>Enzymes</strong></td>
+              <th scope="row">Enzymes</th>
               <td>{{ assay.display_enzymes }}</td>
             </tr>
             <tr>
-              <td><strong>Position</strong></td>
+              <th scope="row">Position</th>
               <td>{{ assay.ref_build }}/chr{{ assay.chromosome }}:{{ assay.position_from }}-{{ assay.position_to }}</td>
             </tr>
             <tr>
-              <td><strong>Sequence</strong></td>
-              <td>{{ assay.sequence }}</td>
+              <th scope="row">Sequence</th>
+              <td id="sequence">{{ assay.sequence|mod_sequence }}</td>
             </tr>
             <tr>
-              <td><strong>Temperature</strong></td>
+              <th scope="row">Temperature</th>
               <td>{{ assay.temperature }}</td>
             </tr>
             <tr>
-              <td><strong>Comment</strong></td>
+              <th scope="row">Comment</th>
               <td>{{ assay.comment }}</td>
             </tr>
+            {% if lots %}
+              <tr>
+                <th scope="row">Lots</th>
+                <td>
+                  {% for lot in lots|get_value_from_dict:assay.pk %}
+                    <a class="btn btn-outline-dark" href="{% url "lots" %}" role="button">
+                      <span class="mx-2">
+                        <strong>{{ lot.lot }}</strong>
+                      </span>
+                      {% component "lot_status" lot.status %}
+                    </a>
+                  {% endfor %}
+                </td>
+              </tr>
+            {% endif %}
+            {% if patients %}
+              <tr>
+                <th scope="row">Patients</th>
+                <td>
+                  {% for patient in patients|get_value_from_dict:assay.pk %}
+                    <a class="btn btn-outline-dark" href="{% url "patients" %}" role="button">
+                      <span class="mx-2">
+                        <strong>{{ patient.study_id }}</strong>
+                      </span>
+                    </a>
+                  {% endfor %}
+                </td>
+              </tr>
+            {% endif %}
           </tbody>
         </table>
       </div>
