--- a/ddpcr/app/templates/app/base_generic.html
+++ b/ddpcr/app/templates/app/base_generic.html
@@ -70,7 +70,8 @@
             <div class="dropdown-menu">
               <a class="dropdown-item" href="{% url 'patients' %}">View list</a>
               <div class="dropdown-divider"></div>
-              <a class="dropdown-item" href={% url 'patient-create' %}#">Add new</a>
+              <a class="dropdown-item" href="{% url 'patient-create' %}#">Add new</a>
+              <a class="dropdown-item" href="{% url 'patients-create' %}#">Upload new</a>
             </div>
           </div>
         </div>
