Feat: Add assays upload function

--- a/ddpcr/app/templates/app/base_generic.html
+++ b/ddpcr/app/templates/app/base_generic.html
@@ -50,6 +50,7 @@
               <a class="dropdown-item" href="{% url 'assays' %}">View list</a>
               <div class="dropdown-divider"></div>
               <a class="dropdown-item" href="{% url 'assay-create' %}">Add new</a>
+              <a class="dropdown-item" href="{% url 'assays-create' %}#">Upload new</a>
             </div>
           </div>
           <div class="btn-group dropright">
